08 Aug 2004 mipsator
 * added support for additional defines (keyword DEFS) in CHECK_HEADER,
   CHECK_LIB, CHECK_TYPE and CHECK_VARIABLE.
 * set option keywords as defines.

08 Aug 2004 mreindl
 * added -fPIC in SLLDFLAGS for gcc.

05 Aug 2004 mipsator
 * fixed makefile template of c++ lib sample.

04 Aug 2004 mreindl
 * sprinkle some -fPICs in c++ lib sample for AMD64 platform.
 * spacing nitpicking in pmkcomp.dat.

02 Aug 2004 mipsator
 * fixed pmk_set_variable() to check type of value to prevent coredump
   on syntax error (noticed by Han Boetes).
 * removed redundant (and confusing dependency in samples/pmkfile.sample
   (noticed by Han Boetes).
 * added ELSE command to be less confusing than IF(!label).
 * updated pmkfile.5 with new ELSE command.

# snapshot 0.8.1-s3

28 Jul 2004 mipsator
 * added lex and yacc detection in pmksetup (request from chandlerc).
 * processed some XXXs.

25 Jul 2004 mipsator
 * improved configuration header processing in autoconf support.

# snapshot 0.8.1-s2

18 Jul 2004 mipsator
 * clean up the code before starting to play with parse_data().
 * fixed getopt() parameters in pmkscan.
 * added option to parse config file in parser_test.
 * modified parse_pmkconf() to use prseng structure.
 * improved parser to be able to process a multiple lines list.
 * modified pmkscan.dat to put list data in multiple lines.
 * fixed C++ library sample.

13 Jul 2004 mipsator
 * misc fixes and cleanup for experimental parsing engine.

12 Jul 2004 mipsator
 * imported experimental parser engine.
 * synced parser test.

11 Jul 2004 mipsator
 * fixed compatibility headers.

28 Jun 2004 mipsator
 * added variable substitution in pmkscan.
 * cleaned-up Makefile.pmk (obsolete tests).

27 Jun 2004 mipsator
 * added more stuff to prepare changes in pmkscan.

26 Jun 2004 mipsator
 * moved process_string() and single_append() into hash_tools.
 * updated pmkfile (was using obsolete commands).

16 Jun 2004 mipsator
 * fixed parse_pc_file().